src/Components/Row.css
.row {}

.row-light {
  background-image: conic-gradient(from 90deg at -10% 100%, #bcc1cd 0deg, #bcc1cd 90deg, #fff 1turn);
}

.row-dark {
  background-image: conic-gradient(from 90deg at -10% 100%, #2b303b 0deg, #2b303b 90deg, #16181d 1turn);
}

.row_posters {
  display: flex;
  align-items: center;
  justify-content: center;
  overflow-y: hidden;
  overflow-x: scroll;
  padding: 20px;
}

.row_posters::-webkit-scrollbar {
  display: none;
}

.row_poster {
  max-height: 25rem;
  margin-right: 10px;
  transition: transform 450ms;
  object-fit: fill;
  border-radius: 10px;
  width: 100%;
}

.row_poster:hover {
  transform: scale(1.09);
  opacity: 1;
  border-radius: 10px;
  box-shadow: 0 10px 20px rgba(0, 255, 255, 0.516);
}

.banner_buttons {
  display: flex;
  justify-content: center;
  align-items: center;
}

.banner_button {
  background-color: #e50914;
  /* Netflix red */
  color: #ffffff;
  font-weight: bold;
  font-size: 16px;
  padding: 12px 24px;
  border: none;
  border-radius: 4px;
  /* Or 0 for square look */
  cursor: pointer;
  transition: background-color 0.3s ease, transform 0.2s ease;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
  text-transform: uppercase;
  letter-spacing: 1px;
  margin: 10px;
}

.banner_button:hover {
  background-color: #f2f2f2;
  transition: all .2s;
  text-decoration: none;
  color: #111;
}

.row-text {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

